apollo-federation/tests/snapshots/main__composition__compose_basic__doesnt_leave_federation_directives_in_the_final_schema.snap
---
source: apollo-federation/tests/composition/compose_basic.rs
expression: print_sdl(api_schema.schema())
---
type Product {
  sku: String!
  name: String!
}

type Query {
  products: [Product!]
}