apollo-federation/tests/snapshots/main__composition__compose_basic__generates_a_valid_supergraph-2.snap
---
source: apollo-federation/tests/composition/compose_basic.rs
expression: print_sdl(api_schema.schema())
---
enum E {
  V1
  V2
}

type Query {
  t: T
}

type S {
  x: Int
}

type T {
  k: ID
  a: Int
  b: String
}

union U = S | T