apollo-federation/tests/snapshots/main__composition__compose_basic__include_types_from_different_subgraphs-2.snap
---
source: apollo-federation/tests/composition/compose_basic.rs
expression: "print_sdl(subgraph_a_extracted.schema.schema())"
snapshot_kind: text
---
schema
  @link(url: "https://specs.apollo.dev/link/v1.0")
  @link(url: "https://specs.apollo.dev/federation/v2.3", import: ["@key", "@requires", "@provides", "@external", "@tag", "@extends", "@shareable", "@inaccessible", "@override", "@composeDirective", "@interfaceObject"])
{
  query: Query
}

type Product {
  sku: String!
  name: String!
}

type Query {
  products: [Product!]
}