apollo-federation/tests/snapshots/main__composition__compose_basic__include_types_from_different_subgraphs.snap
---
source: apollo-federation/tests/composition/compose_basic.rs
expression: print_sdl(api_schema.schema())
---
type Product {
  sku: String!
  name: String!
}

type Query {
  products: [Product!]
}

type User {
  name: String
  email: String!
}