apollo-federation/tests/snapshots/main__composition__compose_basic__preserves_descriptions.snap
---
source: apollo-federation/tests/composition/compose_basic.rs
expression: print_sdl(api_schema.schema())
---
"""A cool schema"""
schema {
  query: Query
}

"""The foo directive description"""
directive @foo(url: String) on FIELD

"""An enum"""
enum E {
  """The A value"""
  A

  """The B value"""
  B
}

"""
Available queries
Not much yet
"""
type Query {
  """Returns tea"""
  t(
    """An argument that is very important"""
    x: String!
  ): String
}