apollo-federation/tests/snapshots/main__composition__compose_basic__respects_given_compose_options-2.snap
---
source: apollo-federation/tests/composition/compose_basic.rs
expression: print_sdl(api_schema.schema())
---
enum E {
  V1
  V2
}

type Query {
  t: T
}

type S {
  x: Int
}

type T {
  a: Int
  b: String
  k: ID
}

union U = S | T